@@ -1,6 +1,7 @@
 2009-05-19
 	* Added inotify support to reload the config when modified automatically
 	on systems that support it
+	* Added inotify support for reloading Lua scripts automagically
 
 2009-05-17
 	* Added support for the Lua programming language
